fix(wanderlog): make dropdowns that use .bg-gray-200 for hover visible

--- a/styles/wanderlog/catppuccin.user.less
+++ b/styles/wanderlog/catppuccin.user.less
@@ -666,6 +666,10 @@
     // Dropdowns
     .DropdownMenu {
       border-color: @accent;
+
+      .DropdownItem.bg-gray-200 {
+        background-color: @surface1;
+      }
     }
     .dropdown {
       &-menu {
